kustomize/crowdsec/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: crowdsec 
spec: {}
status: {}
