kustomize/crowdsec/overlays/prod/local-url.patch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: crowdsec-agent
  namespace: crowdsec
spec:
  template:
    spec:
      containers:
      - env:
        - name: DISABLE_LOCAL_API
          value: "false"
        - name: LOCAL_API_URL
          value: http://crowdsec-service.crowdsec.svc.cluster.local:8080
