kustomize/crowdsec/overlays/prod/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crowdsec-dashboard
  namespace: crowdsec
spec:
  ingressClassName: traefik
  rules:
  - host: crowdsec.tpi2.local
    http:
      paths:
      - backend:
          service:
            name: crowdsec-service
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
