kustomize/crowdsec/overlays/prod/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: crowdsec-dashboard
  namespace: crowdsec
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`crowdsec.tpi2.local`)
      #&& (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      # middlewares:
      #   - name: traefik-dashboard-basicauth 
      #     namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  # tls:
  #   secretName: traefik-cert
  #   certResolver: cloudflare
  #   domains:
  #     - main: traefik.tpi2.local
  #       sans:
  #         - "*.traefik.tpi2.local"
